--- a/project-spec/configs/config
+++ b/project-spec/configs/config
@@ -138,7 +138,7 @@ CONFIG_SUBSYSTEM_EXTRA_DT_FILES=""
 #
 CONFIG_SUBSYSTEM_BOOTARGS_AUTO=y
 CONFIG_SUBSYSTEM_BOOTARGS_EARLYPRINTK=y
-CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlycon root=/dev/mmcblk0p2 rw rootwait"
+
 CONFIG_SUBSYSTEM_EXTRA_BOOTARGS=""
 CONFIG_SUBSYSTEM_DEVICETREE_COMPILER_FLAGS="-@"
 # CONFIG_SUBSYSTEM_DTB_OVERLAY is not set
@@ -236,7 +236,7 @@ CONFIG_YOCTO_MACHINE_NAME="zynq-generic"
 #
 # TMPDIR Location
 #
-CONFIG_TMP_DIR_LOCATION="${PROOT}/build/tmp"
+CONFIG_TMP_DIR_LOCATION="/tmp/petalinux"
 
 #
 # Devtool Workspace Location
@@ -271,3 +271,4 @@ CONFIG_YOCTO_NETWORK_SSTATE_FEEDS_URL="http://petalinux.xilinx.com/sswreleases/r
 # User Layers
 #
 CONFIG_USER_LAYER_0=""
+CONFIG_SUBSYSTEM_BOOTARGS_GENERATED="console=ttyPS0,115200 earlycon root=/dev/mmcblk0p2 rw rootwait"
