Added device tree compiler to docker Added Device tree stuff to readme Added spidev's in system-user dtsi to hopefully enable spi

--- a/project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi
+++ b/project-spec/meta-user/recipes-bsp/device-tree/files/system-user.dtsi
@@ -1,3 +1,25 @@
 /include/ "system-conf.dtsi"
 / {
 };
+
+&spi1 {
+    spidev@0 {
+        compatible = "linux,spidev";
+        spi-max-frequency = <100000>;
+        reg = <0>;
+    };
+};
+&axi_quad_spi_0 {
+    spidev@0 {
+        compatible = "linux,spidev";
+        spi-max-frequency = <100000>;
+        reg = <0>;
+    };
+};
+&axi_quad_spi_1 {
+    spidev@0 {
+        compatible = "linux,spidev";
+        spi-max-frequency = <100000>;
+        reg = <0>;
+    };
+};
